fix graph overflow in mobile view

--- a/src/main/resources/static/css/grayscale.css
+++ b/src/main/resources/static/css/grayscale.css
@@ -333,3 +333,9 @@ body {
 #resultTitle {
     padding-left: 10px;
 }
+
+#detailGraph {
+    width: 100%;
+    height: 450px;
+    overflow-x: scroll;
+}
